# squinter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: squashfs_read.rs
squinter/: Cargo.toml
squinter-cli/: Cargo.toml  README.md
squinter/benches/: squashfs_read.rs
squinter/examples/: subtree.rs  subtree_ng.rs
squinter/src/: lib.rs
squinter/src/squashfs/: block.rs  compressed.rs  filedata.rs  metadata.rs  mod.rs  path.rs  readermux.rs  squashfs.rs  superblock.rs
squinter/tests/: ng_read.rs  parse.rs
src/: lib.rs
src/serde_le/: de.rs  error.rs
src/squashfs/: filedata.rs  metadata.rs  mod.rs  readermux.rs  squashfs.rs
tests/: ng_read.rs  parse.rs
