[package]
name = "squashfs-tools"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "squashfs_read"
harness = false

[dev-dependencies]
squashfs-ng = "0.1.2"
anyhow = "1.0.75"
criterion = "0.5"

[dependencies]
bitflags = "1.3"
byteorder = "1"
clap = { version = "3.2", features = ["derive"] }
flate2 = "1.0"
num_enum = "0.5"
serde = { version = "1.0", features = ["derive"] }
