[workspace]
resolver = "2"
members = [
  "squinter",
  "squinter-cli",
]

[workspace.package]
version = "0.3.1"
authors = ["Kyle Howell <kyle@howellweb.net>"]
edition = "2021"
repository = "https://github.com/klhowell/squinter"
license = "MIT"
keywords = ["squashfs", "filesystem"]
categories = ["filesystem"]

