[package]
name = "squinter-cli"
description = "Command-line tools using the squinter SquashFS interface library"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
squinter = { path = "../squinter", version = "0.3.0" }
termion = "4.0"
