[package]
name = "squinter"
description = "Library to interface with SquashFS filesystems"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[[bench]]
name = "squashfs_read"
harness = false

[features]
default = ["gzip", "xz", "zstd"]
gzip = ["flate2"]
xz = ["lzma-rs"]
zstd = ["ruzstd"]
flate2 = ["dep:flate2"]
lzma-rs = ["dep:lzma-rs"]
ruzstd = ["dep:ruzstd"]

[dev-dependencies]
squashfs-ng = "0.1.2"
anyhow = "1.0.75"
criterion = "0.5"
test-assets-ureq = "0.5.0"

[dependencies]
bitflags = "1.3"
byteorder = "1"
flate2 = { version = "1.0", optional = true }
lzma-rs = { version = "0.3", optional = true }
num_enum = "0.5"
ruzstd = { version = "0.8", optional = true }
